@@ -1,3 +1,8 @@
+2017-11-18  Karl Berry  <karl@tug.org>
+
+	* db.c (elt_in_db): protect against either argument being NULL or
+	empty.  From Doug McKenna, personal mail, 17nov17.
+
 2017-11-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* tex-file.c: Again use a custom kpathsea_getlongpath()
